Bug 118425 - DOCX file is considered ODT when trying to digitally sign
Summary: DOCX file is considered ODT when trying to digitally sign
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:6.2.0 target:6.1.0.1
Keywords: bisected, regression
Depends on:
Blocks:
 
Reported: 2018-06-27 22:01 UTC by Gabor Kelemen (allotropia)
Modified: 2018-06-29 10:29 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the problem (43.43 KB, image/png)
2018-06-27 22:01 UTC, Gabor Kelemen (allotropia)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (allotropia) 2018-06-27 22:01:41 UTC
Created attachment 143177 [details]
Screenshot of the problem

When trying to digitally sign any DOCX file using an X.509 signature, LO lately gives an error message stating the file contains signatures in v1.1 of ODF (!), and save it in ODF 1.2 to continue.
In earlier releases it used to sign DOCX files.

1, Set up a digital signature certificate, make sure you can sign ODF files
2, Open any existing DOCX
3, Go to File - Digital Signatures - Digital Signatures.
4, Click the Sign Document button.
5, LO shows the dialog on the attached screenshot and does not allow to digitally sign the file.

Bibisected using bibisect-linux-64-6.1 to this commit: 

https://cgit.freedesktop.org/libreoffice/core/commit/?id=13596e704e4b48e8b0892867b3f3fc351a2729f9

gabor@dome:~/src/bibisect-linux-64-6.1$ git bisect log
# bad: [86b830bc9ec0e18bba22a6918d402693712c4592] source 5b20226bb0e431afa4505373aaa0af2d28479528
# good: [2c1cccc19f9e70d2ecbc9ba7815abd674ab6d858] source 6eeac3539ea4cac32d126c5e24141f262eb5a4d9
git bisect start 'origin/master' 'oldest'
# good: [f586004c79081288c327d42bf8e900efb455155d] source ccd316d1cb310734848bd20244f509024b549b8c
git bisect good f586004c79081288c327d42bf8e900efb455155d
# good: [f6d2923b58b379ee44fc2f887fd40b57f6376ffd] source 448dafe7e6b54f8e154c46f0d82da6c59febfb74
git bisect good f6d2923b58b379ee44fc2f887fd40b57f6376ffd
# good: [100534be16ec71fa1014ded5c0e8d8fef061d17f] source b46af3670cbcd503875677bcca9cba8ad49984a7
git bisect good 100534be16ec71fa1014ded5c0e8d8fef061d17f
# good: [02927ade84af64d5a4f6db9de583f8e4ea52e37b] source 2bd48ad3bc29b008d756612307d3e72021bc3cbf
git bisect good 02927ade84af64d5a4f6db9de583f8e4ea52e37b
# good: [a1c72ad690fd53a4ceee02addfd107ae7f1c982e] source 0c02f3c5d64bd6db96db0302169fb4c4b48dc27e
git bisect good a1c72ad690fd53a4ceee02addfd107ae7f1c982e
# bad: [894797e5886a0f5bf69184e72f8463066306bd13] source 47d53d6929d449b0b53dc73eddf29fe9c18fb49e
git bisect bad 894797e5886a0f5bf69184e72f8463066306bd13
# bad: [a99ff50cd76afc31e7ff899d26a1e47fe9b33ec5] source 4552096794c408110630ab2eaf47bebaa6c403f2
git bisect bad a99ff50cd76afc31e7ff899d26a1e47fe9b33ec5
# bad: [18659fd37f2833a1ce1333b4dcd7eb14a343ee83] source 066abd6163a1b12e3bdcaf0385a4842c7bc7d119
git bisect bad 18659fd37f2833a1ce1333b4dcd7eb14a343ee83
# good: [3b2f801d79d4cff7d5262c4343bb923206dc106e] source 99337b029a3f94257160077ecf11ee3c59c77b7c
git bisect good 3b2f801d79d4cff7d5262c4343bb923206dc106e
# bad: [b62f6c034f1c7945bad8f17afcd267c88f1bc0b9] source 0f2157cb1513371829d7f8c415324cffed28c377
git bisect bad b62f6c034f1c7945bad8f17afcd267c88f1bc0b9
# bad: [fab5277f1185c30294a21b46bf12efe86e9cf0a9] source c697e7f566302d5d52c3a043d5bddd8cf65499a1
git bisect bad fab5277f1185c30294a21b46bf12efe86e9cf0a9
# bad: [98fdb418286a95c7cecd0d9cc49c836389cbe757] source 57cc8b2e4f93b3a93ce9ac46a2a98eb2a799faa3
git bisect bad 98fdb418286a95c7cecd0d9cc49c836389cbe757
# bad: [4ce0cc9e90dffde1a1f6af1a8d7db11677084f88] source 13596e704e4b48e8b0892867b3f3fc351a2729f9
git bisect bad 4ce0cc9e90dffde1a1f6af1a8d7db11677084f88
# first bad commit: [4ce0cc9e90dffde1a1f6af1a8d7db11677084f88] source 13596e704e4b48e8b0892867b3f3fc351a2729f9
gabor@dome:~/src/bibisect-linux-64-6.1$
Comment 1 Miklos Vajna 2018-06-28 07:44:49 UTC
Confirmed, I'll fix this. It's just a UI bug, the underlying functionality still works.
Comment 2 Commit Notification 2018-06-29 07:08:26 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=02119ce226ef7c1fcf419aa0933aa95381ee309b

tdf#118425 xmlsecurity UI: fix OOXML signing

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2018-06-29 10:29:57 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-6-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=79110f761af53fabde45ef4174c5266c71e9d13d&h=libreoffice-6-1

tdf#118425 xmlsecurity UI: fix OOXML signing

It will be available in 6.1.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.